--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,30 +3,21 @@ on:
     tags:
       - "v*"
       # version tag should be like v1.2.3
+  workflow_dispatch:
 
 name: Publish Crate
 
 jobs:
   publish:
     runs-on: ubuntu-20.04
-    continue-on-error: ${{ matrix.experimental || false }}
-    strategy:
-      matrix:
-        rust: [nightly, stable]
-
-        include:
-          # Nightly is only for reference and allowed to fail
-          - rust: nightly
-            experimental: true
 
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           override: true
       - uses: katyo/publish-crates@v1
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-          dry-run: ${{ !matrix.experimental }}
