--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -61,3 +61,21 @@ jobs:
         with:
           path: "./xr806-pac"
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
+  publish-v853-pac:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v853-pac')
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Install Rust targets
+        run: rustup target add armv7a-none-eabi
+      - uses: katyo/publish-crates@v1
+        with:
+          path: "./v853-pac"
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
